# vc-inspector

./: .gitignore  Cargo.toml  README.md  SPEC.md
crates/vc_inspector_cli/: Cargo.toml
crates/vc_inspector_cli/src/: main.rs
crates/vc_inspector_core/: Cargo.toml
crates/vc_inspector_core/src/: lib.rs  report.rs  validation.rs
crates/vc_inspector_core/src/model/: credential.rs  did.rs  mod.rs
examples/: expired-license.json  missing-proof.json  missing-status.json  valid-degree.json
examples/did-docs/: dmv.json  missing-method.json  not-assertion-authorized.json  university.json  wrong-controller.json  wrong-method-controller.json
examples/reports/: valid-degree.md
