[package]
name = "vc_inspector_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "vc-inspect"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
vc_inspector_core = { path = "../vc_inspector_core" }
